@@ -12,7 +12,8 @@
 - offpunk: "gus" was broken, it is functionnal again
 - opnk/offpunk: more informative prompt in less
 - ansicat: added support for HTML description elements <dt> and <dd> (by Bert Livens)
-- opnk: added "--mode" command-line argument
+- opnk: added "--mode" command-line argument (bug #37)
+- offpunk: support for "preformatted" theming (bug #38)
 
 ## 2.1 - December 15th 2023
 - freshly updated gemtext/rss links are highlighted ("new_link" theme option)
